# stokpro-app

./: .env.example  .env.prod.example  .gitignore  Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py  seed.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  branches.py  categories.py  invoices.py  items.py  purchase_orders.py  stock.py  suppliers.py  warehouses.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  branch.py  category.py  invoice.py  item.py  purchase_order.py  stock_movement.py  supplier.py  user.py  warehouse.py
backend/app/schemas/: invoice.py  item.py  master.py  purchase_order.py  stock.py
backend/app/services/: numbering.py  stock.py
backend/tests/: conftest.py  test_auth_required.py  test_health.py  test_numbering.py  test_schemas.py
docs/: DEPLOY-VPS.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  auth.tsx  format.ts  hooks.ts  index.css  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: Sidebar.tsx
frontend/src/pages/: Dashboard.tsx  Invoices.tsx  Items.tsx  Login.tsx  Master.tsx  PurchaseOrders.tsx  Stock.tsx
